# codedog-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
docs/superpowers/specs/: 2026-05-25-codedog-design.md
scripts/: package.ps1  package.sh
src/: main.rs
src/cli/: decode.rs  encode.rs  format.rs  hash.rs  mod.rs  time.rs
src/core/: encoder.rs  formatter.rs  mod.rs  time_utils.rs
src/tui/: app.rs  mod.rs  ui.rs
src/utils/: input.rs  mod.rs
