[package]
name = "dog"
version = "0.1.0"
edition = "2021"
description = "A CLI+TUI toolbox for developers"
license = "MIT"
authors = ["code-dog"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = "0.26"
crossterm = "0.27"

# Data processing
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Encoding & Hashing
base64 = "0.22"
urlencoding = "2"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"

# Time
chrono = "0.4"
chrono-tz = "0.8"

# Error handling
anyhow = "1"
thiserror = "1"

# Clipboard
arboard = "3"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
